# advent-of-code-2023

./: .gitignore  .ocamlformat  advent_of_code_2023.opam  day04.py  day05.py  dune-project  init-day.sh
day01/src/: day1.ml  dune  main.ml
day01/test/: dune  test_day1.ml
day02/src/: day2.ml  dune  main.ml
day02/test/: dune  test_day2.ml
day03/src/: day3.ml  dune  main.ml
day03/test/: dune  test_day3.ml
day06/src/: day6.ml  dune  main.ml
day06/test/: dune  test_day6.ml
day07/src/: day7.ml  dune  main.ml
day07/test/: dune  test_day7.ml
day08/src/: day8.ml  day8.mli  dune  main.ml
day08/test/: dune  test_day8.ml
day09/src/: day9.ml  dune  main.ml
day09/test/: dune  test_day9.ml
day10/src/: day10.ml  dune  main.ml
day10/test/: dune  test_day10.ml
day11/src/: day11.ml  day11.mli  dune  main.ml
day11/test/: dune  test_day11.ml
day12/src/: day12.ml  dune  main.ml
day12/test/: dune  test_day12.ml
day13/src/: day13.ml  day13.mli  dune  main.ml
day13/test/: dune  test_day13.ml
day14/src/: day14.ml  dune  main.ml
day14/test/: dune  test_day14.ml
day15/src/: day15.ml  dune  main.ml
day15/test/: dune  test_day15.ml
day16/src/: day16.ml  day16.mli  dune  main.ml
day16/test/: dune  test_day16.ml
day17/src/: day17.ml  dune  main.ml
day17/test/: dune  test_day17.ml
day18/src/: day18.ml  day18.mli  dune  main.ml
day18/test/: dune  test_day18.ml
day19/src/: day19.ml  day19.mli  dune  main.ml
day19/test/: dune  test_day19.ml
day20/src/: day20.ml  dune  main.ml
day20/test/: dune  test_day20.ml
runner/src/: runner.ml
